export const snapshot = {};

snapshot[`checkbox prompt > should check an option 1`] = `
stdout:
"? Select an option
❯ ✘ Foo
  ✘ Bar
  ✘ Baz\\x1b[3A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option
  ✘ Foo
❯ ✘ Bar
  ✘ Baz\\x1b[3A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option
  ✘ Foo
  ✘ Bar
❯ ✘ Baz\\x1b[3A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option
  ✘ Foo
  ✘ Bar
❯ ✔ Baz\\x1b[3A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option › Baz
\\x1b[?25h\\x1b[?25h"
stderr:
""
`;

snapshot[`checkbox prompt > should search an option 1`] = `
stdout:
"? Select an option 🔎 
❯ ✘ Foo
  ✘ Bar
  ✘ Baz\\x1b[3A\\x1b[23G\\x1b[G\\x1b[0J
? Select an option 🔎 baz
  ✘ Baz\\x1b[1A\\x1b[26G\\x1b[G\\x1b[0J
? Select an option 🔎 baz
❯ ✘ Baz\\x1b[1A\\x1b[26G\\x1b[G\\x1b[0J
? Select an option 🔎 baz
❯ ✔ Baz\\x1b[1A\\x1b[26G\\x1b[G\\x1b[0J
? Select an option › Baz
\\x1b[?25h\\x1b[?25h"
stderr:
""
`;
